[gd_scene load_steps=3 format=3 uid="uid://clvvluiwjh4u"]

[ext_resource type="Script" path="res://scripts/ui/Settings.gd" id="1_3r4aq"]
[ext_resource type="StyleBox" uid="uid://fth6s70lik51" path="res://resources/SliderLine.tres" id="2_1vsqr"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3r4aq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.113725, 0.176471, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 256
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 256

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="SettingsText" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="MasterLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/slider = ExtResource("2_1vsqr")
max_value = 1.0
step = 0.025
value = 0.5

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/slider = ExtResource("2_1vsqr")
max_value = 1.0
step = 0.025
value = 1.0

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Sound Effects Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/slider = ExtResource("2_1vsqr")
max_value = 1.0
step = 0.025
value = 1.0

[node name="BackToMainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Main Menu"
